# cinnabar-lang

./: .gitignore  CMakeLists.txt  Formating guide.md  LICENSE  README.md  tree.txt
include/: cinnabar.hpp
include/ast/: decl.hpp  expr.hpp  node.hpp  program.hpp  programm.hpp  stmt.hpp
include/ast/decl/: function_decl.hpp  let_decl.hpp
include/ast/exprs/: assign_expr.hpp  binary_expr.hpp  call_expr.hpp  identifier_expr.hpp  literal_expr.hpp  unary_expr.hpp
include/ast/stmts/: expr_stmt.hpp  if_stmt.hpp  let_stmt.hpp  return_stmt.hpp
include/lexer/: lexer.hpp  token.hpp
include/parser/: parser.hpp
include/utils/: io.hpp  pos.hpp
src/: CMakeLists.txt  main.cpp
src/lexer/: CMakeLists.txt  kw_id_scan.cpp  lexer.cpp  scaner.cpp  simple.cpp  utils.cpp
src/parser/: CMakeLists.txt  expr.cpp  parser.cpp  stmt.cpp  utils.cpp
tests/: CMakeLists.txt  lexer_test.cpp
tests/lexer/: EOF_test.cpp  bool_literal_test.cpp  char_literal_test.cpp  comment_test.cpp  delimeters_test.cpp  escape_sequence_test.cpp  float_literal_test.cpp  int_literal_test.cpp  kw_id_test.cpp  operator_test.cpp  position_test.cpp  simple_let_stmt_test.cpp  string_literal_test.cpp  unexpected_syntax_test.cpp
